# OS

./: .gitignore  Cargo.toml  build_bootable_image.sh
bootloader/: Cargo.toml  i686-bootloader.json
bootloader/src/: stage2.rs
bootloader/stage1/: boot.asm
kernel/: Cargo.toml
kernel/src/: lib.rs
